k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dp-ns
  labels:
    app: k8s-app
