k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dp
  namespace: dp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dp-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend # same as nginx upstream name http://backend:3001
  namespace: dp-ns
spec:
  selector:
    app: backend
  ports:
    - port: 3001
